--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "~4.13.1",
     "connect-flash": "0.1.1",
     "connect-mongo": ">= 0.1.7",
-    "mongodb": ">= 0.9.9"
+    "mongodb": ">= 0.9.9",
+    "formidable":"1.0.14"
   }
 }
