--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "connect-flash": "0.1.1",
     "connect-mongo": ">= 0.1.7",
     "mongodb": ">= 0.9.9",
-    "formidable":"1.0.14"
+    "formidable":"1.0.14",
+    "generic-pool": "*"
   }
 }
