--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "connect-mongo": ">= 0.1.7",
     "mongodb": ">= 0.9.9",
     "formidable":"1.0.14",
-    "generic-pool": "*"
+    "generic-pool": "*",
+    "async": "*"
   }
 }
