--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "mongodb": ">= 0.9.9",
     "formidable":"1.0.14",
     "generic-pool": "*",
-    "async": "*"
+    "async": "*",
+    "thumbnail":"*",
+    "gm":"*"
   }
 }
