2015/10/28 优化代码结构

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "async": "*",
     "thumbnail":"*",
     "gm":"*",
-    "node-smushit":"*"
+    "node-smushit":"*",
+    "mongoose": "*"
   }
 }
