--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "async": "*",
     "thumbnail":"*",
     "gm":"*",
-    "node-smushit":"*",
-    "mongoose": "*"
+    "mongoose": "*",
+    "debug":"*",
+    "cookie-parser":"*",
+    "body-parser":"*",
+    "morgan":"*"
   }
 }
