--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "start": "node ./bin/www.js"
   },
   "dependencies": {
-    "express-session": ">= 1.0.0",
-    "ejs": "~2.3.3",
-    "express": "~4.13.1",
-    "connect-flash": "0.1.1",
-    "connect-mongo": ">= 0.1.7",
-    "mongodb": ">= 0.9.9",
-    "formidable":"1.0.14",
+    "express-session": "*",
+    "ejs": "*",
+    "express": "*",
+    "connect-flash": "*",
+    "connect-mongo": "*",
+    "mongodb": "2.0.46",
+    "formidable":"*",
     "generic-pool": "*",
     "async": "*",
     "thumbnail":"*",
