--- a/package.json
+++ b/package.json
@@ -21,6 +21,16 @@
     "debug":"*",
     "cookie-parser":"*",
     "body-parser":"*",
-    "morgan":"*"
+    "morgan":"*",
+    "jquery": "^2.2.1",
+    "jsx": "^0.9.89",
+    "react": "^0.14.7",
+    "webpack": "^1.12.14"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-minify": "0.0.5",
+    "react-hot-loader": "^1.3.0",
+    "webpack-dev-server": "^1.14.1"
   }
 }
