--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "untitled4",
+  "name": "blog",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -24,13 +24,9 @@
     "morgan":"*",
     "jquery": "^2.2.1",
     "jsx": "^0.9.89",
-    "react": "^0.14.7",
-    "webpack": "^1.12.14"
+    "react": "^0.14.7"
   },
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-minify": "0.0.5",
-    "react-hot-loader": "^1.3.0",
-    "webpack-dev-server": "^1.14.1"
+
   }
 }
