--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog",
+  "name": "@tiny_stone/blog",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -12,21 +12,22 @@
     "connect-flash": "*",
     "connect-mongo": "*",
     "mongodb": "2.0.46",
-    "formidable":"*",
+    "formidable": "*",
     "generic-pool": "*",
     "async": "*",
-    "thumbnail":"*",
-    "gm":"*",
+    "thumbnail": "*",
+    "gm": "*",
     "mongoose": "4.2.4",
-    "debug":"*",
-    "cookie-parser":"*",
-    "body-parser":"*",
-    "morgan":"*",
+    "debug": "*",
+    "cookie-parser": "*",
+    "body-parser": "*",
+    "morgan": "*",
     "jquery": "^2.2.1",
     "jsx": "^0.9.89",
     "react": "^0.14.7"
   },
-  "devDependencies": {
-
+  "devDependencies": {},
+  "publishConfig": {
+    "access": "public"
   }
 }
